--- a/web/src/main/resources/templates/student/profile.html
+++ b/web/src/main/resources/templates/student/profile.html
@@ -22,7 +22,7 @@
         </div>
         <!-- Page Content -->
         <div class="container ">
-            <div class="row no-gutters d-flex justify-content-center">
+            <div class="row no-gutters d-flex justify-content-center form-border mb-3">
 
                 <div th:if="${ not inEditMode }" th:insert="fragments/profile-forms  :: student-profile"></div>
                 <div th:if="${ inEditMode }" th:insert="fragments/profile-forms  :: edit-student-profile"></div>
