--- a/web/src/main/resources/templates/educator/edit-expression-of-interest.html
+++ b/web/src/main/resources/templates/educator/edit-expression-of-interest.html
@@ -14,17 +14,17 @@
 
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mt-2">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
           <li class="breadcrumb-item"><a th:href="@{/educator/expressions-of-interest}">Expressions Of Interest</a></li>
           <li class="breadcrumb-item active" aria-current="page">Edit EOI</li>
         </ol>
       </nav>
-
-      <h1 class="text-center m-3" th:text="'Edit Expression Of Interest: ' + ${id}">Title</h1>
+      <div class="form-border center-form mb-3">
+      <h1 class="text-center m-3 text-style" th:text="'Edit Expression Of Interest: ' + ${id}">Title</h1>
 
       <div id="eoi-form" th:replace="fragments/position-forms  :: edit-eoi-form"></div>
-
+    </div>
     </div>
   </div>
 </div>
