--- a/web/src/main/resources/templates/educator/expressions-of-interest.html
+++ b/web/src/main/resources/templates/educator/expressions-of-interest.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/head"></head>
+    <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
 
-    <body class="bg-dark bg-opacity-10" onload="hidePositionsPendingTableIfEmpty()">
+    <body onload="hidePositionsPendingTableIfEmpty()">
         <!-- Top Navigation Bar-->
         <div th:replace="fragments/navigation :: top-navigation"></div>
         <div class="d-flex" id="wrapper">
@@ -13,16 +14,14 @@
     
                     <!-- breadcrumb -->
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
+                        <ol class="breadcrumb mt-2">
                             <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Expressions of Interest</li>
                         </ol>
                     </nav>
-    
-                    <h1 class="text-center m-3">Expressions of Interest</h1>
-    
-                    <div th:replace="fragments/expressions-of-interest-tables :: pending-expressions-of-interest"></div>
 
+                    <h1 class="text-center m-3 text-style">Expressions of Interest</h1>
+                    <div th:replace="fragments/expressions-of-interest-tables :: pending-expressions-of-interest"></div>
                 </div>
             </div>
         </div>
