--- a/web/src/main/resources/templates/partner/new-placement-from-eoi.html
+++ b/web/src/main/resources/templates/partner/new-placement-from-eoi.html
@@ -14,16 +14,15 @@
 
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
+        <ol class="breadcrumb mt-2">
           <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
           <li class="breadcrumb-item"><a th:href="@{/partner/marketplace}">Marketplace</a></li>
           <li class="breadcrumb-item active" aria-current="page">New Placement From EOI</li>
         </ol>
       </nav>
 
-      <h1 class="text-center m-3" th:text="'New Placement From EOI: ' + ${id}">Title</h1>
-
-      <div id="new-position-forms">
+      <h1 class="text-center m-3 text-style" th:text="'New Placement From EOI: ' + ${id}">Title</h1>
+      <div id="new-position-forms" class="form-border center-form mb-3">
         <div th:replace="fragments/position-forms  :: new-placement-form"></div>
       </div>
 
