--- a/web/src/main/resources/templates/student/resume-management.html
+++ b/web/src/main/resources/templates/student/resume-management.html
@@ -56,7 +56,7 @@
                 <tr th:each="doc : ${documents}">
                   <td><span th:text="${doc.filename}"> name </span></td>
                   <td th:text="${#dates.format(doc.uploadDate, 'dd/MM/yyyy')}"></td>
-                  <td style="display: flex;">
+                    <td class="text-center align-middle">
                       <a role="button" th:target="_blank" th:href="@{open?documentId={id}(id=${doc.id})}" class="btn btn-default btn-lg mx-2" title="Open">
                           <span class="material-symbols-rounded ">open_in_new</span>
                       </a>
