--- a/web/src/main/resources/templates/fragments/profile-forms.html
+++ b/web/src/main/resources/templates/fragments/profile-forms.html
@@ -442,7 +442,7 @@
                         <br/>
                         <div class="text-center py-2">
                             <input type="file" name="file"/><br/>
-                            <small><i>Changes will take effect after theys are saved</i></small>
+                            <small><i>Changes will take effect after they are saved</i></small>
                         </div>
                         <br/>
                     </div>
